# Scam-Shield

./: README.md  analyzer.py  app.py  pyproject.toml  replit.md
static/css/: style.css
static/js/: main.js
templates/: index.html
