[project]
name = "cyberaware"
version = "0.1.0"
description = "Scam detection tool that analyzes SMS, URLs, and UPI messages using Flask and NLP."
requires-python = ">=3.11"
authors = [
    { name = "Your Name", email = "youremail@example.com" }
]
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.4",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
